--- a/ZonasBásicasCovid.ipynb
+++ b/ZonasBásicasCovid.ipynb
@@ -3291,7 +3291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3333,7 +3333,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(25,10))\n",
     "fig = sns.barplot(x = df_grafica[\"Fecha\"], y = df_grafica[\"Variación (%)\"], hue = df_grafica[\"Estado\"], palette=\"rainbow\")\n",
-    "plt.savefig(\"Resultado_seaborn.png\")\n",
+    "plt.savefig(\"Gráfica.png\")\n",
     "plt.show()"
    ]
   }
